# note-c

./: n_i2c.c  n_request.c
.github/actions/run_unit_tests_local/: action.yml
.github/actions/run_unit_tests_registry/: action.yml
.github/workflows/: ci.yml
scripts/: run_unit_tests.sh
test/: CMakeLists.txt
test/src/: NoteBinaryReceive_test.cpp  NoteBinaryTransmit_test.cpp
tests/: CMakeLists.txt  NoteRequest_test.cpp  NoteTransaction_test.cpp  README.md
